2011-05-13  Glenn Morris  <rgm@gnu.org>

	* mail/sendmail.el (sendmail-program): Try executable-find first.
	(sendmail-send-it): sendmail-program cannot be unbound.

	* calendar/appt.el (appt-make-list): Simplify.
	(appt-time-msg-list): Doc fix.
	(appt-check): Change mode-line message at the time of the appointment.

2011-05-12  Andreas Schwab  <schwab@linux-m68k.org>

	* progmodes/ld-script.el (ld-script-keywords)
	(ld-script-builtins): Update keywords list.

2011-05-12  Stefan Monnier  <monnier@iro.umontreal.ca>

	* progmodes/grep.el (grep-filter): Don't trip on partial lines.

	* shell.el (shell-completion-vars): New function.
	(shell-mode):
	* simple.el (read-shell-command): Use it.
	(blink-matching-open): No need for " [...]" in minibuffer-message.

2011-05-12  Glenn Morris  <rgm@gnu.org>

	* calendar/appt.el (appt-now-displayed): Remove pointless variable.
	(appt-check): Simplify.

2011-05-12  Eli Zaretskii  <eliz@gnu.org>

	* smerge-mode.el (smerge-resolve): Use null-device rather than a
	literal "/dev/null".

2011-05-12  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/lisp.el (lisp-complete-symbol, lisp-completion-at-point):
	Fix typo.

2011-05-12  Ralph Schleicher  <rs@ralph-schleicher.de>

	* progmodes/which-func.el (which-function):
	Use add-log-current-defun instead of add-log-current-defun-function,
	which might not be defined (Bug#8260).

2011-05-12  Glenn Morris  <rgm@gnu.org>

	* emacs-lisp/bytecomp.el (byte-compile-file-form-defmumble):
	Let byte-compile-initial-macro-environment always take precedence.

2011-05-12  Stefan Monnier  <monnier@iro.umontreal.ca>

	* net/rcirc.el: Add support for SSL/TLS connections.
	(rcirc-server-alist): New field `encryption'.
	(rcirc): Check `encryption' settings.
	(rcirc-connect): New arg `encryption'.  Use open-network-stream.
	Merge make-local-variable into `set'.
	(rcirc--connection-open-p): New function.
	(rcirc-send-string, rcirc-clean-up-buffer): Use it to handle case where